Add serverless specific files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -153,5 +153,10 @@ Temporary Items
 ### Serverless ###
 # Ignore build directory
 .serverless
+.factorypath
+.classpath
+.project
+.settings/
+
 
 # End of https://www.gitignore.io/api/osx,java,maven,intellij,serverless
