--- a/kms-signer/pom.xml
+++ b/kms-signer/pom.xml
@@ -21,6 +21,11 @@
       <version>1.0.0</version>
     </dependency>
     <dependency>
+      <artifactId>aws-java-sdk-kms</artifactId>
+      <groupId>com.amazonaws</groupId>
+      <version>1.11.769</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
       <version>2.8.2</version>
