--- a/kms-signer/pom.xml
+++ b/kms-signer/pom.xml
@@ -55,6 +55,11 @@
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
     </dependency>
+    <dependency>
+      <artifactId>bcpkix-jdk15on</artifactId>
+      <groupId>org.bouncycastle</groupId>
+      <version>1.65</version>
+    </dependency>
   </dependencies>
 
   <build>
